--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,11 @@
   margin: 0 5%;
 }
 
+
 .ind-movie{
   display:flex;
-  border:1px black solid;
+  border:3px black solid;
+  background-color: lightgray;
   border-radius:20px;
   gap:2em;
   justify-content: flex-start;
@@ -47,12 +49,6 @@
 
 li{
   list-style: none;
-}
-
-.TPCY-logo{
-  height: 75vh;
-  border-radius:10px;
-  max-width:100%;
 }
 
 .nav-bar{
