--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,13 @@ li{
   gap:2em;
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 83%;
   background-color: #f8f9fa;
   padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 100;
+  text-align:center;
+  box-sizing:border-box;
 }
 
 .active-button{
@@ -90,7 +92,7 @@ li{
 
 .filter-buttons{
   display:flex;
-  gap:2em;
+  gap:auto;
 }
 
 .movies-displayed{
